2007-08-02  Eric Blake  <ebb9@byu.net>

	Implement fmemopen and open_memstream.
	* libc/stdio/fmemopen.c (_fmemopen_r, fmemopen): New file.
	* libc/stdio/open_memstream.c (_open_memstream_r, open_memstream):
	New file.
	* libc/stdio/fopencookie.c (fcwriter): Minor optimization.
	* libc/include/stdio.h (dprintf, vdprintf): Group all POSIX 200x
	functions together.
	(fmemopen, open_memstream): Declare new functions.
	* libc/stdio/stdio.tex: Document them.
	* libc/stdio/Makefile.am (ELIX_4_SOURCES, CHEWOUT_FILES): Add
	fmemopen and open_memstream.
	* libc/stdio/Makefile.in: Regenerate.

2007-07-31  Eric Blake  <ebb9@byu.net>

	More POSIX stream corner cases.
	* libc/stdio/findfp.c (__sinit): Open stderr read/write.
	* libc/stdio/fdopen.c (_fdopen_r): Set O_APPEND on fd when
	requested.
	* libc/stdio64/fdopen64.c (_fdopen64_r): Likewise.

2007-07-18  Eric Blake  <ebb9@byu.net>

	Fix 'make info'.
	* libc/stdio/stdio.tex: Add missing include.
	* libc/stdio/vfprintf.c: Use expected node name.
	* libc/stdio/vfscanf.c: Likewise.
	* libc/stdio/sscanf.c: Likewise.
	* libc/stdio/sprintf.c: Likewise.
	* libc/stdio/siscanf.c: Likewise.
	* libc/stdio/siprintf.c: Likewise.
	* libc/stdio/fopencookie.c: Quote raw {}.
	Reported by DJ Delorie.

2007-07-13  Eric Blake  <ebb9@byu.net>

	Fix fflush issues.
	* libc/stdio/fflush.c (_fflush_r): New function.
	(fflush): Fix reentrancy and large offset behavior.
	* libc/include/stdio.h (_fflush_r): Add prototype.
	* libc/stdio/fclose.c (_fclose_r): All fflush callers changed.
	* libc/stdio/freopen.c (_freopen_r): Likewise.
	* libc/stdio/fseek.c (_fseek_r): Likewise.
	* libc/stdio/ftell.c (_ftell_r): Likewise.
	* libc/stdio/fvwrite.c (__sfvwrite_r): Likewise.
	* libc/stdio/refill.c (__srefill_r): Likewise.
	* libc/stdio/setvbuf.c (setvbuf): Likewise.
	* libc/stdio/ungetc.c (_ungetc_r): Likewise.
	* libc/stdio/vfprintf.c (__sbprintf): Likewise.
	* libc/stdio/wbuf.c (__swbuf_r): Likewise.
	* libc/stdio64/freopen64.c (_freopen64_r): Likewise.